--- a/src/app/icons/icons.component.html
+++ b/src/app/icons/icons.component.html
@@ -1,40 +1,28 @@
 <div class="panel-header panel-header-sm">
 </div>
 <div class="main-content">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card">
-        <div class="card-header">
-          <h5 class="title">Lleve caserito:</h5>
-          <p class="category">Platos
-          </p>
-        </div>
-        <div class="row">
-          <div class="card col-md-4" *ngFor="let rest of empresas">
-            <div class="card-header">
-              <h4> {{rest.nomEmpresa}}</h4>
-            </div>
-            <div class="card-body">
-              <img style="display:block; margin:auto" [src]="rest.imagen">
-              <br>
-              {{rest.direccion}}
-            </div>
-          </div>
-        </div>
+  <div class="row" style="display:flex;justify-content:center">
+    <div class="card col-md-3 p-3" *ngFor="let rest of empresas" (click)="listMenu(rest.idEmpresa)">
+      <div class="card__img">
+        <img [src]="rest.imagen" alt="imagen" >
+      </div>
+
+      <p class="card__title">{{rest.nomEmpresa}}</p>
+      <p>RUC :{{rest.ruc}}</p>
+      <p> {{rest.direccion}} </p>
+
+      <div class="card__button">
+        <i class="fas fa-angle-right"></i>
       </div>
     </div>
   </div>
-</div>
 
-<div class="row">
-  <dov class="col-md-12">
-    <div class="card">
-      <div class="card-header">
-        Box header
-      </div>
-      <div class="card-body">
-        Body
-      </div>
+  <hr>
+  <div class="row">
+    <div *ngFor="let item of menu" class="col-lg-4 col-md-4 col-sm-4 col-xs-6 col-xs-6">
+      <app-details [plato]="item"></app-details>
     </div>
-  </dov>
+  </div>
+
 </div>
+ 
