security_authentication_finished

--- a/src/app/pagos/pagos.component.html
+++ b/src/app/pagos/pagos.component.html
@@ -53,7 +53,7 @@
                   <td>{{item.cantidad}}</td>
                   <td>{{item.precio * item.cantidad}}</td>
                   <td style="display: block;"><button type="button" class="btn btn-danger"
-                      (click)="deleteMenu(item.idMenu)"><i class="fas fa-trash-alt"></i></button></td>
+                      (click)="deleteMenu(item.idMenu)"><i class="fa fa-trash-alt"></i></button></td>
 
                 </tr>
               </tbody>
