--- a/src/app/shared/details/details.component.html
+++ b/src/app/shared/details/details.component.html
@@ -1,5 +1,4 @@
-
-
+<!-- 
     <div class="card">
       <div class="card-header">
     </div>
@@ -29,6 +28,38 @@
           </div>
         </div>
       </div>
+    </div> -->
+
+<div class="card">
+  <div class="card-body">
+    <div class="row" style="position: relative;">
+      <img class="col-md-3" style="display:block;border-radius:30px;margin:auto;width: 40px;min-height: 40px;" [src]="plato.url">
+      <div class="col-md-4">
+        <p class="mt-2"><strong>{{plato.plato}}</strong></p> 
+
+        <p>
+          Precio : S/. <strong>{{plato.precio}}</strong>
+        </p>
+        <p style="font-size: 0.9rem;">
+          Descripción:
+          {{plato.descripcion}}
+        </p>
+        
+
+      </div>
+      <div class="col-md-5 actions" style="position: relative">
+        <div class="row" style="position:absolute;bottom:0;margin-left: 15px;padding: 10px 10px 10px;">
+          <button class="btn btn-primary"  type="button" (click)="addCount()">+</button>
+          
+            <p style="margin:0 12px;padding-top:18px ;" > {{count}} </p>
+          
+
+          <button class="btn btn-primary"   type="button" (click)="substractionCount()">-</button>
+         <hr>
+          <button class="btn btn-primary" style="margin-left: 15px;" (click)="savePlato(plato)">Guardar</button>
+          <button class="btn btn-primary" type="button" style="margin-left: 5px;" (click)="delete()">Eliminar</button>
+        </div>
+      </div>
     </div>
- 
-  
+  </div>
+</div>
