--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -5,78 +5,59 @@
     <div class="col-md-8">
       <div class="card">
         <div class="card-header">
-          <h5 class="title">Edit Profile</h5>
+          <h5 class="title">My Profile</h5>
         </div>
-        <div class="card-body">
+        <div class="card-body" style="padding: 35px 40px 50px;">
           <form>
             <div class="row">
-              <div class="col-md-5 pr-1">
-                <div class="form-group">
-                  <label>Company (disabled)</label>
-                  <input type="text" class="form-control" disabled="" placeholder="Company" value="Creative Code Inc.">
-                </div>
-              </div>
               <div class="col-md-3 px-1">
                 <div class="form-group">
                   <label>Username</label>
-                  <input type="text" class="form-control" placeholder="Username" value="michael23">
-                </div>
-              </div>
-              <div class="col-md-4 pl-1">
-                <div class="form-group">
-                  <label for="email">Email address</label>
-                  <input name="email" id="email" type="email" class="form-control" placeholder="Email">
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6 pr-1">
-                <div class="form-group">
-                  <label>First Name</label>
-                  <input type="text" class="form-control" placeholder="Company" value="Mike">
+                  <input type="text" class="form-control" disabled placeholder="Username" value="{{_usuario.username}}">
                 </div>
               </div>
               <div class="col-md-6 pl-1">
                 <div class="form-group">
-                  <label>Last Name</label>
-                  <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
+                  <label for="email">Email address</label>
+                  <input type="text" class="form-control" disabled placeholder="Username" value="{{_usuario.email}}">
                 </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-9 pl-1">
                 <div class="form-group">
-                  <label>Address</label>
-                  <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
+                  <label>Last Name</label>
+                  <input type="text" class="form-control" disabled placeholder="Username" value="{{_usuario.lastname}}">
                 </div>
               </div>
             </div>
+
             <div class="row">
               <div class="col-md-4 pr-1">
                 <div class="form-group">
-                  <label>City</label>
-                  <input type="text" class="form-control" placeholder="City" value="Mike">
+                  <label>Edad</label>
+                  <input type="text" class="form-control" disabled placeholder="Username" value="{{_usuario.age}}">
                 </div>
               </div>
               <div class="col-md-4 px-1">
                 <div class="form-group">
-                  <label>Country</label>
-                  <input type="text" class="form-control" placeholder="Country" value="Andrew">
+                  <label>DNI</label>
+                  <input type="text" class="form-control" disabled placeholder="Username" value="{{_usuario.dni}}">
                 </div>
               </div>
               <div class="col-md-4 pl-1">
                 <div class="form-group">
-                  <label>Postal Code</label>
-                  <input type="number" class="form-control" placeholder="ZIP Code">
+                  <label>Role</label>
+                  <input type="text" class="form-control" disabled placeholder="Username" value="{{_usuario.role}}">
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
                 <div class="form-group">
-                  <label>About Me</label>
-                  <textarea rows="4" cols="80" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
-                </div>
+                  
+                  <button class="btn btn-primary btn-lg" (click)="logout()" [disabled]="loadingPayment">Logout</button>
+                  </div>
               </div>
             </div>
           </form>
@@ -92,16 +73,14 @@
           <div class="author">
             <a href="#">
               <img class="avatar border-gray" src="../assets/img/mike.jpg" alt="...">
-              <h5 class="title">Mike Andrew</h5>
+              <h5 class="title">{{_usuario.name}}</h5>
             </a>
             <p class="description">
-              michael24
+              {{_usuario.email}}
             </p>
           </div>
           <p class="description text-center">
-            "Lamborghini Mercy
-            <br> Your chick she so thirsty
-            <br> I'm in that two seat Lambo"
+            
           </p>
         </div>
         <hr>
